Service & contact no longer aligned to the bottom

--- a/aegon-sass-library/layout/sidebars/_menu_desktop.scss
+++ b/aegon-sass-library/layout/sidebars/_menu_desktop.scss
@@ -256,8 +256,6 @@ aside.desktop {
   li.stick-bottom {
     position: relative;
 
-    left: 0;
-    bottom: 0;
     z-index: 2;
     // width: 170px;
 
